--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
     "concurrently": "3.1.0",
     "copyfiles": "1.0.0",
     "rimraf": "2.5.4",
-    "serve": "^11.3.0",
+    "serve": "^11.3.2",
     "tsify": "^4.0.0",
     "typescript": "^2.9",
-    "uglify-js": "^2.8.29",
+    "uglify-js": "^3.4.10",
     "watchify": "^3.11.1"
   },
   "dependencies": {
     "d3": "^3.5.16",
     "material-design-lite": "^1.3.0",
+    "prismjs": "^1.24.1",
     "seedrandom": "^2.4.3"
   }
 }
