fixed build scripts

--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "deep-playground-prototype",
-  "version": "2016.3.10",
+  "name": "rocky-playground",
+  "version": "2021.09",
   "description": "",
   "private": true,
   "scripts": {
     "clean": "rimraf dist",
-    "start": "npm run serve-watch",
-    "prep": "concat node_modules/material-design-lite/material.min.js node_modules/seedrandom/seedrandom.min.js > dist/lib.js",
+    "make-dir": "mkdirp dist",
+    "build-lib": "concat node_modules/material-design-lite/material.min.js node_modules/seedrandom/seedrandom.min.js > dist/lib.js",
     "build-css": "concat node_modules/material-design-lite/material.min.css styles.css > dist/bundle.css",
     "watch-css": "concat node_modules/material-design-lite/material.min.css styles.css -o dist/bundle.css",
     "build-html": "copyfiles index.html dist",
     "watch-html": "concat index.html -o dist/index.html",
     "build-js": "browserify src/playground.ts -p [tsify] | uglifyjs -c > dist/bundle.js",
     "watch-js": "watchify src/playground.ts -p [tsify] -v --debug -o dist/bundle.js",
-    "build": "npm run prep && npm run build-js && npm run build-css && npm run build-html",
-    "watch": "npm run prep && concurrently \"npm run watch-js\" \"npm run watch-css\" \"npm run watch-html\"",
+    "prep": "npm run make-dir",
+    "build": "npm run build-lib && npm run build-js && npm run build-css && npm run build-html",
+    "watch": "npm run build-lib && concurrently \"npm run watch-js\" \"npm run watch-css\" \"npm run watch-html\"",
     "serve": "npx serve dist/",
     "serve-watch": "concurrently \"npx serve dist/\" \"npm run watch\""
   },
@@ -23,6 +24,7 @@
     "concat": "^1.0.3",
     "concurrently": "3.1.0",
     "copyfiles": "1.0.0",
+    "mkdirp": "^1.0.4",
     "rimraf": "2.5.4",
     "serve": "^12.0.1",
     "tsify": "^4.0.0",
