--- a/package.json
+++ b/package.json
@@ -12,17 +12,15 @@
   "private": true,
   "scripts": {
     "clean": "rimraf dist",
-    "make-dir": "mkdirp dist",
-    "build-lib": "concat node_modules/material-design-lite/material.min.js node_modules/seedrandom/seedrandom.min.js > dist/lib.js",
+    "prep": "mkdirp dist && concat node_modules/material-design-lite/material.min.js node_modules/seedrandom/seedrandom.min.js > dist/lib.js",
     "build-css": "concat node_modules/material-design-lite/material.min.css styles.css > dist/bundle.css",
     "watch-css": "concat node_modules/material-design-lite/material.min.css styles.css -o dist/bundle.css",
     "build-html": "copyfiles index.html dist",
     "watch-html": "concat index.html -o dist/index.html",
     "build-js": "browserify src/playground.ts -p [tsify] | uglifyjs -c > dist/bundle.js",
     "watch-js": "watchify src/playground.ts -p [tsify] -v --debug -o dist/bundle.js",
-    "prep": "npm run make-dir",
-    "build": "npm run build-lib && npm run build-js && npm run build-css && npm run build-html",
-    "watch": "npm run build-lib && concurrently \"npm run watch-js\" \"npm run watch-css\" \"npm run watch-html\"",
+    "build": "npm run prep && npm run build-js && npm run build-css && npm run build-html",
+    "watch": "npm run prep && concurrently \"npm run watch-js\" \"npm run watch-css\" \"npm run watch-html\"",
     "serve": "npx serve dist/",
     "serve-watch": "concurrently \"npx serve dist/\" \"npm run watch\""
   },
