--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prep": "mkdirp dist && concat node_modules/material-design-lite/material.min.js node_modules/seedrandom/seedrandom.min.js > dist/lib.js",
     "build-css": "concat node_modules/material-design-lite/material.min.css styles.css > dist/bundle.css",
     "watch-css": "concat node_modules/material-design-lite/material.min.css styles.css -o dist/bundle.css",
-    "build-html": "copyfiles index.html dist",
+    "build-html": "copyfiles index.html favicon.ico dist",
     "watch-html": "concat index.html -o dist/index.html",
     "build-js": "browserify src/playground.ts -p [tsify] | uglifyjs -c > dist/bundle.js",
     "watch-js": "watchify src/playground.ts -p [tsify] -v --debug -o dist/bundle.js",
