--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "rocky-playground",
   "version": "2021.09.00",
   "description": "A neural network playground for earth scientists",
-  "keywords": ["geology", "geophysics", "machine learning", "neural networks"],
+  "keywords": [
+    "geology",
+    "geophysics",
+    "machine learning",
+    "neural networks"
+  ],
   "author": "Agile Scientific <hello@agilescientific.com> (https://agilescientific.com)",
   "license": "Apache 2",
   "bugs": {
@@ -31,11 +36,11 @@
     "copyfiles": "1.0.0",
     "mkdirp": "^1.0.4",
     "rimraf": "2.5.4",
-    "serve": "^12.0.1",
+    "serve": "^13.0.1",
     "tsify": "^4.0.0",
     "typescript": "^2.9",
     "uglify-js": "^3.4.10",
-    "watchify": "^3.11.1"
+    "watchify": "^4.0.0"
   },
   "dependencies": {
     "d3": "^3.5.16",
