--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rocky-playground",
-  "version": "2021.09.00",
+  "version": "2022.05.00",
   "description": "A neural network playground for earth scientists",
   "keywords": [
     "geology",
@@ -47,5 +47,6 @@
     "material-design-lite": "^1.3.0",
     "prismjs": "^1.24.1",
     "seedrandom": "^2.4.3"
-  }
+  },
+  "optionalDependencies": { "fsevents": "^2.1.2" }
 }
