--- a/amplify.yml
+++ b/amplify.yml
@@ -2,7 +2,7 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm ci
+        - npm ci --no-optional
     build:
       commands:
         - npm run build
