--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "watchify": "^4.0.0"
   },
   "dependencies": {
+    "chokidar": "^3.5.3",
     "d3": "^3.5.16",
     "material-design-lite": "^1.3.0",
     "prismjs": "^1.24.1",
